--- a/foundations/intro-to-css/02-class-id-selectors/style.css
+++ b/foundations/intro-to-css/02-class-id-selectors/style.css
@@ -1,3 +1,16 @@
 .odd-number {
-    background-color: lightpink;
+    background-color: #ffb6c1;
+    font-family: Verdana, sans-serif, deja vu sans;
+    font-size: 24px;
+}
+
+#num-2 {
+    color: #0000ff;
+    font-size: 36px;
+}
+
+#num-4 {
+    background-color: #90ee90;
+    font-size: 24px;
+    font-weight: bold;
 }
