--- a/foundations/intro-to-css/02-class-id-selectors/style.css
+++ b/foundations/intro-to-css/02-class-id-selectors/style.css
@@ -1,6 +1,6 @@
 .odd-number {
     background-color: #ffb6c1;
-    font-family: Verdana, sans-serif, deja vu sans;
+    font-family: Verdana, "DejaVu sans", sans-serif;
     font-size: 24px;
 }
 
