--- a/foundations/intro-to-css/03-grouping-selectors/style.css
+++ b/foundations/intro-to-css/03-grouping-selectors/style.css
@@ -1,13 +1,13 @@
-.button {
+.btn {
     font-size: 28px;
     font-family: Helvetica, "Times New Roman", sans-serif;
 }
 
-.button.left {
+.btn.left {
     background-color: black;
     color: white;
 }
 
-.button.right {
+.btn.right {
     background-color: yellow;
 }
