Modify class names to utilize grouping selectors in CSS

--- a/foundations/intro-to-css/03-grouping-selectors/style.css
+++ b/foundations/intro-to-css/03-grouping-selectors/style.css
@@ -1,13 +1,14 @@
-.btn {
+.dark, 
+.bright {
     font-size: 28px;
     font-family: Helvetica, "Times New Roman", sans-serif;
 }
 
-.btn.left {
+.dark {
     background-color: black;
     color: white;
 }
 
-.btn.right {
+.bright {
     background-color: yellow;
 }
