Change margin-left value in div three to auto

--- a/foundations/block-and-inline/01-margin-and-padding-1/style.css
+++ b/foundations/block-and-inline/01-margin-and-padding-1/style.css
@@ -9,6 +9,7 @@ body {
   /* CHANGE ME */
   padding: 32px;
   margin: 12px;
+  
 }
 
 .two {
@@ -24,5 +25,5 @@ body {
   width: 200px;
   /* CHANGE ME */
   padding: 32px;
-  margin-left: 325px;
+  margin-left: auto;
 }
