--- a/foundations/flex/02-flex-header/style.css
+++ b/foundations/flex/02-flex-header/style.css
@@ -11,7 +11,7 @@
   color: tomato;
   background: white;
   padding: 4px 32px;
-  margin: 10px 10px 10px 10px
+  margin: 10px 10px 10px 10px;
 }
 
 ul {
@@ -19,6 +19,12 @@ ul {
   list-style-type: none;
   display: flex;
   padding: 10px;
+}
+
+li {
+  display: flex;
+  justify-content: space-around;
+  margin: 10px;
 }
 
 a {
