--- a/foundations/flex/03-flex-header-2/style.css
+++ b/foundations/flex/03-flex-header-2/style.css
@@ -14,6 +14,7 @@ body {
   box-shadow: 0 0 8px rgba(0,0,0,.1);
   display: flex;
   align-items: center;
+  justify-content: space-between;
 }
 
 .profile-image {
@@ -22,6 +23,12 @@ body {
   border-radius: 50%;
   width: 48px;
   height: 48px;
+  margin-right: 8px;
+}
+
+.logo-links {
+  display: flex;
+  align-items: center;
 }
 
 .logo {
@@ -30,6 +37,12 @@ body {
   font-weight: 900;
   font-style: italic;
   margin-left: 8px;
+}
+
+.right-items {
+  display: flex;
+  align-items: center;
+  gap: 8px;
 }
 
 button {
@@ -49,5 +62,6 @@ a {
 ul {
   list-style-type: none;
   display: flex;
-  gap: 16px;
+  align-items: center;
+  gap: 12px;
 }
