--- a/foundations/flex/04-flex-information/style.css
+++ b/foundations/flex/04-flex-information/style.css
@@ -14,6 +14,10 @@ img {
   justify-content: center;
 }
 
+.plants {
+  padding: 32px;
+  display: flex;
+}
 /* do not edit this footer */
 .footer {
   position: fixed;
