--- a/foundations/flex/05-flex-modal/style.css
+++ b/foundations/flex/05-flex-modal/style.css
@@ -23,6 +23,11 @@ body {
   padding: 20px;
 }
 
+.header {
+  font-size: larger;
+  font-weight: bold;
+}
+
 .icon {
   color: royalblue;
   font-size: 26px;
