Add padding-bottom property to text div

--- a/foundations/flex/05-flex-modal/style.css
+++ b/foundations/flex/05-flex-modal/style.css
@@ -41,6 +41,10 @@ body {
   justify-content: center;
 }
 
+.text {
+  padding-bottom: 12px;
+}
+
 .close-button {
   background: #eee;
   border-radius: 50%;
