Put header text, icon, and close button inside new header, add flexbox properties to header

--- a/foundations/flex/05-flex-modal/style.css
+++ b/foundations/flex/05-flex-modal/style.css
@@ -24,6 +24,11 @@ body {
 }
 
 .header {
+  display: flex;
+  justify-content: space-around;
+}
+
+.header-text {
   font-size: larger;
   font-weight: bold;
 }
