Add flexbox to body and change direction to column, push footer down using margin-top auto

--- a/foundations/flex/06-flex-layout/style.css
+++ b/foundations/flex/06-flex-layout/style.css
@@ -5,6 +5,8 @@ body {
   margin: 0;
   overflow: hidden;
   font-family: Roboto, sans-serif;
+  display: flex;
+  flex-direction: column;
 }
 
 img {
@@ -42,6 +44,7 @@ li a {
   display: flex;
   justify-content: space-between;
   background-color: #eeeeee;
+  margin-top: auto;
 }
 
 .left-links {
