--- a/foundations/flex/06-flex-layout/style.css
+++ b/foundations/flex/06-flex-layout/style.css
@@ -40,6 +40,11 @@ li a {
   justify-content: space-between;
 }
 
+content {
+  flex: 1; /* content div takes up all the available space between
+  the header and the footer */
+}
+
 .footer {
   display: flex;
   justify-content: space-between;
