Add margin-top to buttons and apdding of 10px

--- a/foundations/flex/06-flex-layout/style.css
+++ b/foundations/flex/06-flex-layout/style.css
@@ -13,11 +13,16 @@ img {
   width: 600px;
 }
 
+.buttons {
+  padding-top: 16px;
+}
+
 button {
   font-family: Roboto, sans-serif;
   border: none;
   border-radius: 8px;
   background: #eee;
+  padding: 10px;
 }
 
 input {
