--- a/foundations/flex/07-flex-layout-2/style.css
+++ b/foundations/flex/07-flex-layout-2/style.css
@@ -19,6 +19,9 @@ body {
   background: #eee;
   color: darkmagenta;
   margin-top: auto;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .sidebar {
