--- a/foundations/flex/07-flex-layout-2/style.css
+++ b/foundations/flex/07-flex-layout-2/style.css
@@ -30,6 +30,12 @@ body {
   box-sizing: border-box;
 }
 
+li a {
+  text-decoration: none;
+  font-size: 24px;
+  color: white;
+}
+
 .card {
   border: 1px solid #eee;
   box-shadow: 2px 4px 16px rgba(0,0,0,.06);
