Store sidebar and cards section within content div, add flexbox?

--- a/foundations/flex/07-flex-layout-2/style.css
+++ b/foundations/flex/07-flex-layout-2/style.css
@@ -24,6 +24,17 @@ body {
   justify-content: center;
 }
 
+.content {
+  display: flex;
+  flex-direction: row;
+}
+
+.cards-section {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+}
+
 .sidebar {
   width: 300px;
   background: royalblue;
