Use display flex on sidebar and add max-width to cards section div

--- a/foundations/flex/07-flex-layout-2/style.css
+++ b/foundations/flex/07-flex-layout-2/style.css
@@ -33,12 +33,14 @@ body {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
+  max-width: 1000px;
 }
 
 .sidebar {
   width: 300px;
   background: royalblue;
   box-sizing: border-box;
+  display: flex;
 }
 
 li a {
