--- a/foundations/flex/07-flex-layout-2/style.css
+++ b/foundations/flex/07-flex-layout-2/style.css
@@ -34,8 +34,6 @@ body {
 
 .cards-section div {
   width: 250px;
-  margin-left: 24px;
-  margin-top: 24px;
   padding: 16px;
 }
 
@@ -45,6 +43,7 @@ body {
   flex-wrap: wrap;
   max-width: 1000px;
   padding: 48px;
+  gap: 32px;
 }
 
 .sidebar {
